--- a/weback/package.json
+++ b/weback/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "capitulo-weback",
+  "name": "capitulo-webpack",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "mini-css-extract-plugin": "0.4.0",
     "css-loader": "0.28.11",
+    "mini-css-extract-plugin": "0.4.0",
+    "node-sass": "^4.13.1",
+    "sass-loader": "7.0.1",
     "style-loader": "0.21.0",
-    "webpack": "^4.20.2",
-    "webpack-cli": "3.1.1"
+    "webpack": "4.8.1",
+    "webpack-cli": "2.1.3"
   }
 }
